fix bw styles and menu button overlap on devices

--- a/src/css/bwstyle.css
+++ b/src/css/bwstyle.css
@@ -1,8 +1,22 @@
 .bw-image {
-    filter: grayscale(100%);
-    transition: filter 2s ease;
+
+    /*
+    filter: blur(5px);
+    filter: brightness(0.4);
+    filter: contrast(200%);
+    filter: drop-shadow(16px 16px 20px blue);
+    filter: grayscale(50%);
+    filter: hue-rotate(90deg);
+    filter: invert(75%);
+    filter: opacity(25%);
+    filter: saturate(30%);
+    filter: sepia(60%);
+    */
+
+    filter: grayscale(100%) contrast(65%) brightness(130%);
+    transition: filter 1s ease;
 }
 
 .bw-image:hover {
-    filter: grayscale(0%);
+    filter: grayscale(0%) contrast(100%) brightness(100%);
 }
