--- a/src/css/panels.css
+++ b/src/css/panels.css
@@ -1,4 +1,4 @@
-.content{
+.content {
     margin: 0 1.5rem;
 }
 
@@ -13,10 +13,10 @@
     left: 0;
     margin: 15px;
     color: white;
-    font-size: 15px;
+    font-size: 20px;
 }
 
-.panel img{
+.panel img {
     width: 100%;
     height: 100%;
     aspect-ratio: 1/1;
@@ -34,7 +34,8 @@
     .panels {
         grid-template-columns: repeat(2, 1fr);
     }
-    .content{
+
+    .content {
         margin: 0 1.5rem;
     }
 }
@@ -43,7 +44,8 @@
     .panels {
         grid-template-columns: repeat(4, 1fr);
     }
-    .content{
+
+    .content {
         margin: 0 0rem;
     }
 }
